# petit_trad

./: .editorconfig  .gitignore  .markdownlint-cli2.yaml  .prettierrc.toml  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  release.yml
config/: default.toml  glossary.tsv
crates/petit-core/: Cargo.toml
crates/petit-core/examples/: translate.rs
crates/petit-core/src/: config.rs  error.rs  gemma.rs  glossary.rs  language.rs  lib.rs  model_manager.rs
crates/petit-tui/: Cargo.toml
crates/petit-tui/src/: app.rs  cli.rs  config.rs  main.rs  ui.rs
doc/: architecture.md  plan.md  prompt-format.md
docs/: BUILD.md  PLANS.md  tech-debt-tracker.md
docs/design-docs/: architecture.md  glossary-constraints.md  index.md  prompt-format.md
docs/execution-plans/: tech-debt-tracker.md
docs/execution-plans/active/: 2026-02-19-phase-4-cross-platform-ci-release.md  2026-02-19-phase-5-polish-performance-ux.md  2026-02-19-phase-6-gui-exploration.md  2026-02-19-task-4-deprecation-and-shortcut-cleanup.md
docs/execution-plans/completed/: 2026-02-19-foundation-phases-retro.md  2026-02-19-phase-4-cross-platform-ci-release.md  2026-02-19-repo-organization-refresh.md  2026-02-19-task-4-deprecation-and-shortcut-cleanup.md  2026-02-22-best-practices-repo-reorganization.md  2026-02-23-phase-5-polish-performance-ux.md  2026-02-23-runtime-smoke-harness.md  2026-02-23-translation-eval-harness.md  2026-02-24-harness-followup-docs-smoke-ci.md  2026-03-24-glossary-constraints-implementation.md  2026-04-06-auto-source-language-implementation.md
docs/execution-plans/research/: 2026-02-23-phase-5-polish-performance-ux-reset.md  2026-02-23-runtime-smoke-harness.md  2026-02-23-translation-eval-harness.md  2026-02-24-harness-followup-alignment-smoke-eval-ci.md  2026-03-24-glossary-constraints-embeddings-hnsw.md  2026-04-06-auto-source-language.md
docs/product-specs/: index.md  overview.md  quality.md  requirements.md  scope.md
eval/fixtures/: smoke-inputs.tsv  smoke.tsv
proto/: requirements.txt  translate_gguf_test.py  translate_test.py
scripts/: check.sh  eval-capture.sh  eval.sh  smoke.sh
