[workspace]
resolver = "2"
members = [
    "crates/petit-core",
    "crates/petit-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/chrisyqpro/petit_trad"

[workspace.dependencies]
# Core
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
encoding_rs = "0.8"

# Inference
llama-cpp-2 = "0.1.132"
llama-cpp-sys-2 = "0.1.132"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async (optional)
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

# Paths
directories = "5.0"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
