[package]
name = "petit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Translation engine using TranslateGemma"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
encoding_rs.workspace = true

llama-cpp-2.workspace = true
llama-cpp-sys-2.workspace = true

[features]
default = []
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
vulkan = ["llama-cpp-2/vulkan"]
cpu-only = []

[lints]
workspace = true
