[package]
name = "petit-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI for petit_trad translator"

[[bin]]
name = "petit"
path = "src/main.rs"

[dependencies]
petit-core = { path = "../petit-core" }
anyhow.workspace = true
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
toml.workspace = true
directories.workspace = true

[features]
default = []
cuda = ["petit-core/cuda"]
metal = ["petit-core/metal"]
vulkan = ["petit-core/vulkan"]
cpu-only = ["petit-core/cpu-only"]

[lints]
workspace = true
